crates/wdl-engine/tests/tasks/task-variable/error.txt
error: task execution failed for task `test`: process terminated with non-zero exit code 1
  ┌─ tests/tasks/task-variable/source.wdl:3:6
  │
3 │ task test {
  │      ^^^^ this task failed to execute

